# naics-mcp-server

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SETUP.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  docker.yml  release.yml
data/: naics.duckdb.wal
docs/: API_REFERENCE.md  HTTP_ENDPOINTS.md  PRODUCTION_REQUIREMENTS.md  SETUP.md
k8s/: README.md
k8s/base/: configmap.yaml  deployment.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  service.yaml  servicemonitor.yaml
k8s/overlays/production/: kustomization.yaml
naics_mcp_server/: __init__.py  __main__.py  app_context.py  cli.py  config.py  http_server.py  server.py
naics_mcp_server/core/: __init__.py  classification_workbook.py  cross_reference.py  database.py  embeddings.py  errors.py  health.py  query_expansion.py  relationships.py  search_engine.py  shutdown.py  validation.py
naics_mcp_server/models/: __init__.py  naics_models.py  relationships.py  response_models.py  search_models.py
naics_mcp_server/observability/: __init__.py  audit.py  logging.py  metrics.py  metrics_server.py  rate_limiting.py
naics_mcp_server/tools/: __init__.py  analytics.py  classification.py  diagnostics.py  hierarchy.py  relationships.py  search.py  workbook.py  workbook_tools.py
notebooks/: 01_load_codes.py  02_load_descriptions.py  03_load_index_terms.py  04_load_cross_refs.py  05_generate_embeddings.py  05_generate_embeddings_standalone.py  06_compute_relationships.py  99_explore_database.py  README.md
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_errors.py  test_health.py  test_http_server.py  test_integration.py  test_logging.py  test_metrics.py  test_rate_limiting.py  test_relationships.py  test_search_engine.py  test_shutdown.py  test_validation.py  test_workbook.py
